# nitf2jpeg

./: CMakeLists.txt  LICENSE  NitfMetaDataTable.txt  README.md  nitf2jpeg.cpp
